Beautify the Valine & 404

--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@ dynamic_title: true
 ---
 
 <div class="lead">
+  <p style="color: #dadce0; font-size: 150px;">\(&gt;Д&lt;)/</p>
   <p>Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. </p>
   <p><a href="{{ site.baseurl }}/">Head back Home</a> to try finding it again, or search for it on the <a href="{{ site.baseurl }}/tabs/archives">Archives page</a>.</p>
 </div>
